// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DurationInput should render 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      class="form-group form-group-autofit"
    >
      <div
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
      />
      <div
        class="form-group-item display-value form-group-item-label form-group-item-shrink"
      />
      <div>
        operator
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <div
          class="input-group"
        >
          <input
            class="input-root form-control"
            type="number"
            value=""
          />
          <div
            class="input-group-item input-group-append"
          >
            <div
              aria-haspopup="true"
              class="dropdown dropdown-root"
            >
              <button
                class="button-root btn btn-secondary dropdown-toggle show-caret"
                type="button"
              >
                <span
                  class="text-truncate"
                >
                  Hours
                </span>
                
                <span
                  class="caret-root"
                >
                  <svg
                    class="icon-root lexicon-icon lexicon-icon-caret-bottom"
                    viewBox=""
                  >
                    <use
                      xlink:href="#caret-bottom"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DurationInput should render with data 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      class="form-group form-group-autofit"
    >
      <div
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
      />
      <div
        class="form-group-item display-value form-group-item-label form-group-item-shrink"
      >
        Time on Page
      </div>
      <div>
        operator
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <div
          class="input-group"
        >
          <input
            class="input-root form-control"
            type="number"
            value=""
          />
          <div
            class="input-group-item input-group-append"
          >
            <div
              aria-haspopup="true"
              class="dropdown dropdown-root"
            >
              <button
                class="button-root btn btn-secondary dropdown-toggle show-caret"
                type="button"
              >
                <span
                  class="text-truncate"
                >
                  Seconds
                </span>
                
                <span
                  class="caret-root"
                >
                  <svg
                    class="icon-root lexicon-icon lexicon-icon-caret-bottom"
                    viewBox=""
                  >
                    <use
                      xlink:href="#caret-bottom"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
